--- a/BaseForCode/app/src/main/res/values/colors.xml
+++ b/BaseForCode/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <color name="navigation_title_normal">#878787</color>
+    <color name="navigation_title_pressed">#52a0ff</color>
 </resources>
