--- a/BaseForCode/app/src/main/res/layout/activity_main.xml
+++ b/BaseForCode/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:padding="2dp"
-        android:src="@drawable/home_normal"
-        app:layout_constraintBottom_toTopOf="@id/tv_title"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/navigation_home"
-        android:textSize="12sp"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#FFEEEEEE"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.bob.uilibrary.navigation.bottom.BottomNavigationBar
         android:id="@+id/bottom_navigation"
@@ -32,9 +23,11 @@
         android:layout_height="46dp"
         android:background="#FFDDDDDD"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_container"
         app:navigation_icon_size="18dp"
         app:navigation_icon_title_gap="2dp"
-        app:navigation_title_size="12sp"
-        />
+        app:navigation_title_size="12sp"/>
 
 </android.support.constraint.ConstraintLayout>
