--- a/BaseForCode/app/src/main/res/layout/module_fragment.xml
+++ b/BaseForCode/app/src/main/res/layout/module_fragment.xml
@@ -21,8 +21,9 @@
 
     <TextView
         android:id="@+id/tv_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:background="#DDEEFF"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
